kubernetes/media/stash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: media
  labels:
    app.kubernetes.io/name: stash
spec:
  selector:
    app.kubernetes.io/name: stash
  ports:
    - name: http
      port: 9999
      targetPort: http
      protocol: TCP
